- Update version number, build for 3.5.8 - Add new IsKeyDown and IsKeyPressed helpers to handle key stuff myself

--- a/CamUnsnap/CamUnsnap.csproj
+++ b/CamUnsnap/CamUnsnap.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net472</TargetFramework>
     <AssemblyName>Kobrakon-CamUnsnap</AssemblyName>
     <Copyright>© 2022 Zachary Braden</Copyright>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
